<resources>
    <string name="app_name">Smart Lock Client</string>
    <string name="SETUP_DONE">Setup Done</string>
    <string name="SETUP_DONE_DIALOG_MESSAGE">The lock is now setup and it will automatically connect to the internet from now on.</string>
    <string name="OK">OK</string>
    <string name="BLE_DISCONNECTED">Disconnected</string>
    <string name="BLE_CONNECTED">Connected</string>
    <string name="BLE_CONNECTING">Connecting…</string>
    <string name="REMOTE_CONNECTED">Remote Connected</string>

    <string name="INVALID_DATE_ERROR">Invalid Date</string>
    <string name="create_new_invite">Create new invite</string>
    <string name="invite_create_title">Invite Created</string>
    <string name="invite_created_dialog_message">"Invite ID: "</string>
    <string name="CLOSE">Close</string>
    <string name="COPY_TO_CLIPBOARD">Copy to Clipboard</string>
    <string name="redeem_invite_code">Redeem Invite Code</string>
    <string name="smart_locks">Smart Locks</string>
    <string name="sidebar_about">About Smart Locks</string>
    <string name="sidebar_profile">Profile</string>
    <string name="sidebar_logout">Log out</string>


    <!-- Login and Create account -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="create_one">Create one</string>
    <string name="sign_in_using">Sign in using</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="or">or</string>
    <string name="email_required_error">Please input your email address.</string>
    <string name="email_format_error">Invalid email address format.</string>
    <string name="email_invalid_error">Email address does not exist or is invalid.</string>
    <string name="password_required_error">Please input your password.</string>
    <string name="password_wrong_error">Password is incorrect or invalid.</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="sign_in_msg">Click here to sign in</string>
    <string name="create_failed">Could not create account.</string>
    <string name="passwords_not_match">Passwords don\'t match</string>
    <string name="email_duplicated">This email already have an account registered.</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_later">Sign in later</string>
    <string name="sign_up_later">Sign up later</string>
    <string name="sign_up">Sign up</string>
    <string name="smart_door_created_title">New smart lock</string>
    <string name="smart_lock_created_msg">New smart lock successfully created</string>
    <string name="error_creating_smart_lock_invalid_invite_msg">Error creating new smart lock. Invalid invite, try again.</string>
    <string name="error_creating_smart_lock_repeated_lock_msg">Error creating new smart lock. User already have this lock registered, try again.</string>
    <string name="error_creating_smart_lock_registered_lock_msg">Error creating new smart lock. Lock already registered. Try adding lock with an invite code.</string>
    <string name="read_qr_code_to_add_lock">Read QR Code to add lock</string>
    <string name="scan_for_ble_devices">Scan for BLE devices</string>
    <string name="add_new_smart_lock_title">Add new Smart Lock</string>
    <string name="invite_code">Invite Code</string>
    <string name="preview">preview</string>
    <string name="smart_lock_name">Smart Lock Name</string>
    <string name="save">Save</string>
    <string name="edit_smart_lock_title">Edit Smart Lock</string>
    <string name="select_smart_lock_icon">Select Smart Lock icon:</string>
    <string name="connect">Connect</string>
    <string name="skip">Skip</string>
    <string name="setup_wifi_title">Setup Smart Lock Wifi</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="slide_to_unlock">Slide to Unlock</string>
    <string name="connected_state">Connected State</string>
    <string name="slide_to_lock">Slide to Lock</string>
    <string name="scan">Scan</string>
    <string name="stop">Stop</string>
    <string name="SHARE_INVITE">Share Invite</string>
    <string name="delete_smart_lock_dialog_title">Are you sure you want to delete?</string>
    <string name="delete_smart_lock_dialog_msg">You are about to delete this Smart Lock.\n This action is irreversible!\n\n Are you sure you want to proceed?\n</string>
    <string name="delete_smart_lock_dialog_delete_btn">Yes, delete this smart lock</string>
    <string name="delete_smart_lock_dialog_not_delete_btn">No, don\'t delete smart lock</string>
    <string name="CREATE_NEW_INVITE">Create new invite</string>
    <string name="phone_id_preference_file_key">UTILS_SHARED_PREFS</string>
    <string name="proximity_notification_title">Proximity Unlock Active</string>
    <string name="proximity_notification_message">Smart Lock Client is using the GPS and BLE to automatically lock and unlock Smart Locks</string>
    <string name="proximity_ticker_text">ticker test</string>
    <string name="proximity_channel_name">Proximity Notification Channel</string>
    <string name="channel_description">Notification for Proximity Unlock</string>
    <string name="proximity_channel_ID">PROXIMITY_NOTIFICATION_CHANNEL</string>
    <string name="lock_when_far">Lock when far</string>
    <string name="unlock_when_near">Unlock when near</string>

</resources>