<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/sidebar_group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/sidebar_locks"
            android:icon="@drawable/ic_baseline_door_24"
            android:title="@string/smart_locks" />
    </group>

    <group
        android:id="@+id/sidebar_group_extra"
        android:checkableBehavior="single">
        <item
            android:id="@+id/sidebar_about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/sidebar_about" />
        <item
            android:id="@+id/sidebar_profile"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/sidebar_profile" />
        <item
            android:id="@+id/sidebar_logout"
            android:icon="@drawable/ic_round_logout_24"
            android:title="@string/sidebar_logout" />
    </group>

</menu>