<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SmartLockActivity">

    <include
        android:id="@+id/action_bar_include"
        layout="@layout/taller_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/action_bar_include"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/connected_state_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_round_bluetooth_24"
            app:tint="@color/blue_bluetooth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/connected_state" />

        <TextView
            android:id="@+id/connected_state_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BLE_CONNECTED"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/connected_state_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.ncorti.slidetoact.SlideToActView
        android:id="@+id/slide_to_unlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="55dp"
        android:layout_marginHorizontal="20dp"


        app:slider_height="60dp"

        app:slider_icon="@drawable/ic_font_awesome_lock"
        app:rotate_icon="false"

        app:area_margin="0dp"
        app:inner_color="@color/blue_500"
        app:outer_color="@color/blue_200"
        app:slider_icon_color="@color/white"
        app:text_color="@color/black"
        app:text_size="18dp"
        app:text="@string/slide_to_unlock"
        app:complete_icon="@drawable/ic_font_awesome_lock_open"
        app:bump_vibration="50"
        />


</androidx.constraintlayout.widget.ConstraintLayout>